--- a/Data_warehouse_design/sql/schema_create_tables.ipynb
+++ b/Data_warehouse_design/sql/schema_create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e812a24",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
    "source": [
     "import sqlite3\n",
     "\n",
-    "# Connect to (or create) the database\n",
+    "# Connect to the database\n",
     "conn = sqlite3.connect('retail_dw.db')\n",
     "cursor = conn.cursor()\n",
     "\n",
